I added a section for what is git and create a folder with  photos

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -13,5 +13,10 @@
       <h1>GitHub</h1>
       <p>Git is Version Control Software</p>
     </header>
+    <!-- What is Git Section -->
+    <section class="what-git">
+        <img class="git-img" src="/img/github-img.jpg"/>
+        
+    </section>
 </body>
 </html
