--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -15,8 +15,12 @@
     </header>
     <!-- What is Git Section -->
     <section class="what-git">
-        <img class="git-img" src="/img/github-img.jpg"/>
-        
+        <img class="git-img" src="img/github-img.jpg"/>
+        <div class="box-git">
+          <h2>What is Git?</h2>
+          <p>Git is a distributed version control system<br>
+           that allows developers to track changes made in their code</p>
+        </div>
     </section>
 </body>
 </html
