--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -23,5 +23,14 @@
         </div>
         <button class="btn"><a href="https://www.atlassian.com/git/tutorials/what-is-git" target="_blank">Read More</a></button>
     </section>
+    <section id="git-section">
+        <div class="why-git">
+          <img class="img-section" src="img/git.png">
+          <div class="branch-float">
+            <h3>Why do developers need Git?</h3>
+            <p class="paragragh">Developers need Git for several  reasons: Git keeps a history of changes made to the codebase</p>
+          </div>
+        </div>
+    </section>
 </body>
 </html
