I added section with div and img

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -4,10 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wireframe</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <!-- Add your HTML markup here -->
     <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
+    <header id="git-header">
+      <h1>GitHub</h1>
+      <p>Git is Version Control Software</p>
+    </header>
+    <!-- What is Git Section -->
+    <section class="what-git">
+        <img class="git-img" src="img/github-img.jpg"/>
+        <div class="box-git">
+          <h2>What is Git?</h2>
+          <p>Git is a distributed version control system<br>
+           that allows developers to track changes made in their code</p>
+        </div>
+        <button class="btn"><a href="https://www.atlassian.com/git/tutorials/what-is-git" target="_blank">Read More</a></button>
+    </section>
+    <section id="git-section">
+        <div class="why-git">
+          <img class="img-section" src="img/git.png">
+        </div>
+    </section>
 </body>
 </html
