I added id git-section css style

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -26,6 +26,10 @@
     <section id="git-section">
         <div class="why-git">
           <img class="img-section" src="img/git.png">
+          <div class="branch-float">
+            <h3>Why do developers need Git?</h3>
+            <p class="paragragh">Developers need Git for several  reasons: Git keeps a history of changes made to the codebase</p>
+          </div>
         </div>
     </section>
 </body>
