--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -16,6 +16,10 @@
   <form>
     <!-- write your html here-->
     <!-- try writing out the requirements first-->
+     <div class="label-name">
+      <label for="name">Name</label>
+      <input type="text" name="name" id="name" placeholder="Enter Full name" required>
+     </div>
   </form>
 
   </main>
