I added style for label-email

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -9,13 +9,21 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header>
+  <header class="header">
     <h1>Product Pick</h1>
   </header>
   <main>
   <form>
     <!-- write your html here-->
     <!-- try writing out the requirements first-->
+    <div class="label-name">
+    <label for="name">Name</label>
+    <input type="text" name="name" id="name" placeholder="Enter full name" required>
+    </div>
+    <div class="label-email">
+      <label for="email">Email</label>
+      <input type="text" name="email" id="email" placeholder="Enter your email" required>
+    </div>
   </form>
 
   </main>
