--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -9,13 +9,33 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header>
+  <header class="header">
     <h1>Product Pick</h1>
   </header>
   <main>
   <form>
     <!-- write your html here-->
     <!-- try writing out the requirements first-->
+    <div class="label-name">
+    <label for="name">Name</label>
+    <input type="text" name="name" id="name" placeholder="Enter full name" required>
+    </div>
+    <div class="label-email">
+      <label for="email">Email</label>
+      <input type="text" name="email" id="email" placeholder="Enter your email" required>
+    </div>
+    <div>
+      <label for="size" class="tshirt">T-shirt Size</label>
+      <select id="size" name="size" required>
+      <option value="">Select a size</option>
+      <option value="XS">XS</option>
+      <option value="S">S</option>
+      <option value="M">M</option>
+      <option value="L">L</option>
+      <option value="XL">XL</option>
+      <option value="XXL">XXL</option>
+      </select>
+     </div>
   </form>
 
   </main>
