--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -9,13 +9,53 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header>
+  <header class="header">
     <h1>Product Pick</h1>
   </header>
   <main>
   <form>
     <!-- write your html here-->
     <!-- try writing out the requirements first-->
+    <div class="label-name">
+    <label for="name">Name</label>
+    <input type="text" name="name" id="name" placeholder="Enter full name" required>
+    </div>
+    <div class="label-email">
+      <label for="email">Email</label>
+      <input type="text" name="email" id="email" placeholder="Enter your email" required>
+    </div>
+    <div>
+      <label for="size" class="tshirt">T-shirt Size</label>
+      <select id="size" name="size" required>
+      <option value="">Select a size</option>
+      <option value="XS">XS</option>
+      <option value="S">S</option>
+      <option value="M">M</option>
+      <option value="L">L</option>
+      <option value="XL">XL</option>
+      <option value="XXL">XXL</option>
+      </select>
+     </div>
+     <div class="radio">
+      <div>
+      <label for="black">Black</label>
+      <input type="radio" name="color" id="black" value="black">
+      </div>
+      <div>
+      <label for="white">White</label>
+      <input type="radio" name="color" id="white" value="white">
+      </div>
+      <div>
+      <label for="blue">Blue</label>
+      <input type="radio" name="color" id="blue" value="blue">
+      </div>
+      </div>
+      <div>
+        <label for="deliveryDate" class="d-date">Preferred Delivery Date:</label>
+        <input type="date" id="deliveryDate" name="deliveryDate" required min="" max="" placeholder="Select a delivery date">
+      </div>
+      
+
   </form>
 
   </main>
